--- a/css/main.css
+++ b/css/main.css
@@ -7,15 +7,12 @@
 }
 
 body{
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(/images/1.jpg);
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url("../images/bg-photo.jpg");
     background-position: center;
     background-size: cover;
     height: 100vh;
 }
 
-/* .container{
-    background: black;
-} */
 
 h1{
     color: white;
